--- a/webapp/sfapp/templates/plan/technicien/demande_de_travaux.html.twig
+++ b/webapp/sfapp/templates/plan/technicien/demande_de_travaux.html.twig
@@ -9,31 +9,31 @@
         <nav class="flex" aria-label="Breadcrumb">
             <ol class="inline-flex items-center space-x-1 md:space-x-2 rtl:space-x-reverse">
                 <li class="inline-flex items-center">
-                    <a href="/accueil" class="inline-flex items-center text-sm font-medium text-gray-700 hover:text-blue-600 dark:text-gray-400 dark:hover:text-white">
-                        <svg class="w-3 h-3 me-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
+                    <a href="/accueil" class="inline-flex items-center lg:text-sm text-2xl font-medium text-gray-700 hover:text-blue-600 dark:text-gray-400 dark:hover:text-white">
+                        <svg class="lg:w-3 lg:h-3 lg:me-2.5 w-6 h-6 me-4" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
                             <path d="m19.707 9.293-2-2-7-7a1 1 0 0 0-1.414 0l-7 7-2 2a1 1 0 0 0 1.414 1.414L2 10.414V18a2 2 0 0 0 2 2h3a1 1 0 0 0 1-1v-4a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v4a1 1 0 0 0 1 1h3a2 2 0 0 0 2-2v-7.586l.293.293a1 1 0 0 0 1.414-1.414Z"/>
                         </svg>
                         Accueil
                     </a>
                 </li>
                 <li>
-                    <div class="flex items-center">
-                        <svg class="rtl:rotate-180 w-3 h-3 text-gray-400 mx-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
+                    <div class="flex items-center lg:text-sm text-2xl">
+                        <svg class="rtl:rotate-180 lg:w-3 lg:h-3 w-6 h-6 text-gray-400 mx-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
                             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 9 4-4-4-4"/>
                         </svg>
-                        <a href="/plan/demande-travaux/{{ demandeTravaux.id }}" class="ms-1 text-sm font-medium text-gray-700 hover:text-blue-600 md:ms-2 dark:text-gray-400 dark:hover:text-white">Demande de travaux</a>
+                        <a href="/plan/demande-travaux/{{ demandeTravaux.id }}" class="ms-1 lg:text-sm text-2xl font-medium text-gray-700 hover:text-blue-600 md:ms-2 dark:text-gray-400 dark:hover:text-white">Demande de travaux</a>
                     </div>
                 </li>
             </ol>
         </nav>
     </div>
-    <div class="relative overflow-x-auto lg:max-w-7xl mx-auto">
-        <h1 class="text-4xl pb-12 text-center">Demande de travaux en salle {{ salle.nom }}</h1>
-        <div class="flex flex-row justify-between max-w-screen-xl mx-auto">
+    <div class="relative overflow-x-auto w-full flex flex-col items-center">
+        <h1 class="lg:text-4xl text-7xl pb-12 text-center">Demande de travaux en salle {{ salle.nom }}</h1>
+        <div class="flex flex-row justify-between w-5/6 mx-auto">
             <div>
                 {{ form_start(formSystemeAcqui) }}
-                    <label class="text-xl">{{ field_label(formSystemeAcqui.sa) }}</label>
-                    <select name="{{ field_name(formSystemeAcqui.sa) }}" id="selectSa" class="mt-4 bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" onchange='this.form.submit()'>
+                    <label class="lg:text-xl text-3xl">{{ field_label(formSystemeAcqui.sa) }}</label>
+                    <select name="{{ field_name(formSystemeAcqui.sa) }}" id="selectSa" class="lg:text-base text-2xl mt-4 bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" onchange='this.form.submit()'>
 
                         {% for label, value in field_choices(formSystemeAcqui.sa) %}
                          <option id="optionSA" value="{{ value }}">{{ label }}</option>
@@ -45,7 +45,7 @@
                 {% if listeReleves is not null and not demandeTravaux.Terminee %}
                     <button
                         type="button"
-                        class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mt-[auto] dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800 "
+                        class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg lg:text-sm text-2xl px-5 py-2.5 mt-[auto] dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800 "
                         onclick="window.location.href='/plan/{{ demandeTravaux.getId }}/declarer-operationnel'"
                     >
                         Déclarer opérationnel
@@ -60,8 +60,8 @@
             Envoyer un mail depuis la boite mail par défaut
             <div class="tooltip-arrow" data-popper-arrow></div>
         </div>
-        <div class="relative overflow-x-auto lg:max-w-7xl mx-auto mt-5">
-            <p class="flex flex-nowrap items-center p-4 mb-4 text-yellow-800 rounded-xl bg-yellow-100 dark:bg-gray-800 dark:text-yellow-300" id="commentaire">
+        <div class="flex flex-col w-full items-center mt-5 lg:text-base text-2xl">
+            <p class="w-5/6 flex flex-nowrap items-center p-4 mb-4 text-yellow-800 rounded-xl bg-yellow-100 dark:bg-gray-800 dark:text-yellow-300" id="commentaire">
         {% if  demandeTravaux.EmailDemandeur is not null and demandeTravaux.Commentaire is not null %}
                 <span class="min-w-max">Demande de {{ demandeTravaux.EmailDemandeur }}</span>
                 <a data-tooltip-target="envoyer-mail" class="mx-2" href="mailto:{{ demandeTravaux.EmailDemandeur }}? &subject=Erreur Smart Campus de la salle {{ salle.nom }}">
@@ -83,11 +83,11 @@
 
 
     <div class="max-w-screen-xl w-5/6 mx-auto">
-        <h2 class="mt-12 mb-4 text-xl">Relevés</h2>
+        <h2 class="mt-12 mb-4 lg:text-xl text-4xl">Relevés</h2>
         {% if listeReleves is not null %}
             <div class="relative overflow-x-auto shadow-md sm:rounded-lg">
-                <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
-                    <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
+                <table class="w-full lg:text-sm text-xl text-left rtl:text-right text-gray-500 dark:text-gray-400">
+                    <thead class="lg:text-xs text-lg text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
                     <tr >
                         <th scope="col" class="px-6 py-3">
                             Date
