--- a/webapp/sfapp/templates/plan/charge_de_mission/ajouter_salle.html.twig
+++ b/webapp/sfapp/templates/plan/charge_de_mission/ajouter_salle.html.twig
@@ -119,9 +119,9 @@
                     error_item_class: 'text-red-600 text-sm mt-1',
                 }) }}
             </div>
-            <div class="grid grid-cols-subgrid gap-4 col-span-3 mt-5 w-5/6">
+            <div class="grid grid-cols-subgrid gap-4 col-span-3 mt-5 lg:w-full w-5/6">
                 <div class="mx-auto col-start-1">
-                    <button id="submit" type="submit" disabled name="{{ field_name(formSalle.ajouter) }}" class="cursor-not-allowed text-white bg-blue-700 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">
+                    <button id="submit" type="submit" disabled name="{{ field_name(formSalle.ajouter) }}" class="cursor-not-allowed text-white bg-blue-700 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg lg:text-sm text-5xl px-5 py-2.5 me-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">
                         {{ field_label(formSalle.ajouter) }}</button>
                 </div>
             </div>
